# ai-diffusion-dpg

./: .dockerignore  .env.local.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Issue-338-scope-1&2-plan.md  README.md  docker-build-push.sh
action_gateway/: Dockerfile  README.md  main.py  pyproject.toml
action_gateway/config/: config.yaml  domain.yaml  dpg.yaml
action_gateway/src/: mock_gateway.py  mock_server.py  models.py  server.py
action_gateway/tests/: conftest.py  test_adapter_factory.py  test_adapter_registry.py  test_main.py  test_mcp_adapter.py  test_mock_gateway.py  test_mock_server.py  test_models.py  test_rest_api_adapter.py  test_schema_config.py  test_server.py
agent_core/: Dockerfile  README.md  main.py  pyproject.toml
agent_core/config/: config.yaml  domain.yaml  dpg.yaml
agent_core/designs/: 02_kkb_flow_graph_config.md  agent_workflow_engine.md  flow_graph_design.md  kkb_agent_workflow_config.md  kkb_domain_graph_config.md
agent_core/src/: base.py  exceptions.py  language_normalisation.py  llm_proxy_server.py  manager_agent.py  models.py  nlu_processor.py  orchestrator.py  session.py  tool_registry.py  turn.py  turn_assembler.py  workflow_loader.py
agent_core/tests/: test_backwards_compat_channels.py  test_backwards_compat_user_state.py  test_chat_provider_anthropic.py  test_chat_provider_base.py  test_chat_provider_factory.py  test_chat_provider_metrics.py  test_chat_provider_ollama.py  test_chat_provider_openai.py  test_chat_provider_types.py  test_exceptions.py  test_http_clients.py  test_language_normalisation.py  test_llm_proxy_server.py  test_llm_wrapper.py  test_llm_wrapper_caching.py  test_main.py  test_manager_agent.py  test_memory_http_client.py  test_models.py  test_nlu_processor.py  test_orchestration_server.py  test_orchestrator.py  test_orchestrator_consent_event.py  test_schema_config.py  test_session.py  test_session_endpoints.py  test_stream_endpoint.py  test_stream_events.py  test_stream_turn.py  test_tool_registry.py  test_trust_output_batching.py  test_turn.py  test_turn_assembler.py  test_turn_assembler_integration.py  test_user_state_resolver.py  test_voice_length_cap.py  test_workflow_gate.py  test_workflow_loader.py
dev-kit/: Dockerfile  Dockerfile.dockerignore  README.md  __init__.py  loader.py  pyproject.toml  run_tests.sh  schema.py
dev-kit/configs/: .gitignore
dev-kit/dev_kit/: __init__.py  loader.py  schema.py
dev-kit/dpg/: action_gateway.yaml  agent_core.yaml  knowledge_engine.yaml  learning_layer.yaml  memory_layer.yaml  observability_layer.yaml  reach_layer.yaml  telephone_adapter.yaml  trust_layer.yaml
dev-kit/frontend/: index.html  package.json  vite.config.js
dev-kit/tests/: test_accumulator_azure.py  test_accumulator_connector.py  test_accumulator_web_mode.py  test_app_deploy_routes.py  test_app_endpoints.py  test_app_project_routes.py  test_compose_channel_secrets.py  test_crypto.py  test_deployer_compose.py  test_deployer_dependencies.py  test_deployer_helm.py  test_deployer_kubeconfig.py  test_deployer_presets.py  test_devkit_auth.py  test_devkit_config.py  test_e2e_tool_phase_flow.py  test_ingest_endpoints.py  test_loader.py  test_openapi_parser.py  test_phase_ordering.py  test_phase_prompts_task7.py  test_renderer.py  test_schema.py  test_schema_action_gateway.py  test_schema_reach_layer.py  test_tools_openapi.py  test_tools_phase.py
knowledge_engine/: Dockerfile  PLAN.md  README.md  conftest.py  main.py  pyproject.toml
knowledge_engine/config/: config.yaml  domain.yaml  dpg.yaml
knowledge_engine/scripts/: ingest.py
knowledge_engine/src/: auth.py  base.py  engine.py  llm_proxy_client.py  models.py  upload_router.py
knowledge_engine/tests/: test_engine.py  test_glossary.py  test_ingest_single.py  test_ingestion_db.py  test_ke_auth.py  test_llm_proxy_client.py  test_main.py  test_multimodal_input_handler.py  test_schema_config.py  test_server.py  test_static_knowledge_base.py  test_storage.py  test_upload_router.py
learning_layer/: Dockerfile  README.md  main.py  pyproject.toml
learning_layer/config/: config.yaml  domain.yaml  dpg.yaml
learning_layer/src/: console_logger.py  server.py
learning_layer/tests/: test_console_logger.py  test_main.py  test_server.py
memory_layer/: Dockerfile  MemoryLayer_Design_v2.md  README.md  main.py  pyproject.toml
memory_layer/config/: config.yaml  domain.yaml  dpg.yaml
memory_layer/src/: audit_store.py  audit_store_base.py  graph_context_store.py  graph_journey_store.py  graph_user_store.py  memory_layer.py  neo4j_context_store.py  neo4j_journey_store.py  neo4j_user_store.py  server.py  session_memory.py  session_store.py
memory_layer/tests/: test_audit_store.py  test_graph_stores.py  test_main.py  test_memory_layer.py  test_neo4j_stores.py  test_schema_config.py  test_server.py  test_session_memory.py  test_session_store.py
observability_layer/: Dockerfile  README.md  main.py  pyproject.toml
observability_layer/config/: domain.yaml  dpg.yaml
observability_layer/src/: base.py  console_logger.py  otel_observability_layer.py  outcome_tracker.py  server.py
observability_layer/tests/: test_console_logger.py  test_dpg_telemetry.py  test_main.py  test_otel_observability_layer.py  test_outcome_tracker.py  test_schema.py  test_server.py
reach_layer/: DEPLOYMENT.md  Dockerfile  README.md  config_loader.py  conftest.py  main.py  pyproject.toml  run.py  server.py
reach_layer/base/: __init__.py  config_loader.py  events.py  pyproject.toml  reach_layer_base.py  text_channel.py  voice_channel.py
reach_layer/cli/: Dockerfile  main.py  pyproject.toml
reach_layer/config/: config.yaml  domain.yaml  dpg.yaml
reach_layer/mcp/: Dockerfile  main.py  pyproject.toml
reach_layer/src/: auth.py  base.py  cli_reach.py  web_reach.py
reach_layer/tests/: test_cli_reach.py  test_config_loader.py  test_main.py  test_server.py  test_web_reach.py
reach_layer/voice/: Dockerfile  README.md  pyproject.toml  (+1 more)
telephony_adapter/: Dockerfile  README.md  config_loader.py  pyproject.toml  server.py
trust_layer/: Dockerfile  README.md  main.py  pyproject.toml
(+753 files in other folders)
