[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "action_gateway"
version = "0.1.0"
description = "Action Gateway stub — mock ONEST server and in-process gateway client for KKB PoC"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0", # config/dpg.yaml + config/domain.yaml loading
    "mcp>=1.0",
    "observability-layer",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.uv.sources]
observability-layer = { path = "../observability_layer" }

[dependency-groups]
dev = [
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.1.0",
]
