[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-core-dpg"
version = "0.1.0"
description = "Agent Core DPG — orchestration and LLM execution layer for the AI Composition Framework"
requires-python = ">=3.11"

dependencies = [
    "anthropic>=0.40.0",         # SDK used exclusively in llm_wrapper/claude_wrapper.py
    "pyyaml>=6.0",               # YAML config loading from config/config.yaml
    "fastapi>=0.111.0",          # HTTP server for LLM proxy endpoint (/internal/llm/call)
    "uvicorn[standard]>=0.29.0", # ASGI server that runs the FastAPI app
    "python-dotenv>=1.0.0",      # loads .env into environment at startup
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
    "httpx>=0.27.0",  # required by FastAPI TestClient in tests
]

# ---------------------------------------------------------------------------
# Package discovery — src flat layout
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
