[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-core-dpg"
version = "0.1.0"
description = "Agent Core DPG — orchestration and LLM execution layer for the AI Composition Framework"
requires-python = ">=3.11"

dependencies = [
    "anthropic>=0.40.0", # SDK used exclusively in chat_provider/anthropic_provider.py
    "openai>=2.0.0", # SDK used exclusively in chat_provider/openai_provider.py
    "ollama>=0.1.0", # SDK used exclusively in chat_provider/ollama_provider.py
                      # NOTE: must stay on v2 (same major as dev-kit's openai>=2.40.0).
                      # The two packages run in separate venvs today; if they are ever
                      # consolidated into a single lockfile, keep the pins compatible.
    "google-genai>=1.0.0", # SDK used exclusively in chat_provider/gemini_provider.py
    "httpx>=0.27.0", # HTTP clients for all downstream DPG services
    "pydantic>=2.0", # Request/response models for FastAPI server
    "pyyaml>=6.0", # YAML config loading from config/config.yaml
    "fastapi>=0.111.0", # HTTP server for orchestration and LLM proxy endpoints
    "uvicorn[standard]>=0.29.0", # ASGI server that runs the FastAPI app
    "python-dotenv>=1.0.0", # loads .env into environment at startup
    "observability-layer",
    "opentelemetry-instrumentation-httpx>=0.61b0",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "google-genai>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
]

# ---------------------------------------------------------------------------
# Package discovery — src flat layout
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.uv.sources]
observability-layer = { path = "../observability_layer" }

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.1.0",
]
