[project]
name = "dev-kit"
version = "0.1.0"
description = "DPG Domain Configuration Kit with conversation agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "anthropic>=0.49.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-dotenv>=1.1.0",
    "tenacity>=9.1.4",
    "httpx>=0.28.1",
    "cryptography>=46.0.7",
    "python-multipart>=0.0.18",
    "openai>=2.40.0", # v2 SDK for OpenAI provider in app.py
                       # NOTE: agent_core also pins openai>=2.0.0. Both must stay
                       # on the same major version. Separate venvs today; reconcile
                       # pins before consolidating into a shared lockfile.
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dev_kit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]
