[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-engine-dpg"
version = "0.1.0"
description = "Knowledge Engine DPG — NLU, RAG, and prompt assembly for the AI Composition Framework"
requires-python = ">=3.11"

dependencies = [
    "chromadb>=0.4.0",
    "langchain-text-splitters>=0.2.0",
    "openai>=1.0.0",
    "pymupdf>=1.23.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "packaging>=23.0",
    "azure-storage-blob>=12.0",
    "python-multipart>=0.0.9",
    "python-docx>=1.1.0",
    "observability-layer",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
    "respx>=0.21",
]

# ---------------------------------------------------------------------------
# Package discovery — src flat layout (mirrors agent_core convention)
# ---------------------------------------------------------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.uv.sources]
observability-layer = { path = "../observability_layer" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]
