[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reach_layer"
version = "0.1.0"
description = "Reach Layer stub — CLI REPL input/output for KKB PoC"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",  # HTTP client for Agent Core POST /process_turn
    "pyyaml>=6.0",    # config/config.yaml loading
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
