[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reach_layer"
version = "0.1.0"
description = "Reach Layer stub — CLI REPL input/output for KKB PoC"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",  # HTTP client for Agent Core POST /process_turn
    "pyyaml>=6.0",    # config/dpg.yaml + config/domain.yaml loading
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true
