[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reach_layer"
version = "0.1.0"
description = "Reach Layer stub — CLI REPL input/output for KKB PoC"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0", # HTTP client for Agent Core + Memory Layer proxying
    "pyyaml>=6.0", # config/dpg.yaml + config/domain.yaml loading
    "python-dotenv>=1.0.0", # .env.local / .env loading for local dev
    "fastapi>=0.111.0", # web server for web channel adapter
    "uvicorn[standard]>=0.29.0", # ASGI server
    "observability-layer",
    "opentelemetry-instrumentation-fastapi>=0.61b0",
    "opentelemetry-instrumentation-httpx>=0.61b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
    "httpx>=0.27.0",       # TestClient transport
    "respx>=0.22.0",       # httpx mock for integration tests
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src", "server.py", "config_loader.py"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.uv.sources]
observability-layer = { path = "../observability_layer" }

