[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reach-layer-base"
version = "0.1.0"
description = "Reach Layer base class hierarchy — shared by cli/web/voice channel deployables."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[tool.setuptools]
# Treat this directory itself as the package. The package's top-level Python
# files are at the same level as this pyproject.toml, imported as
# ``reach_layer_base`` by consumers.
packages = ["reach_layer_base", "reach_layer_base.schema"]

[tool.setuptools.package-dir]
reach_layer_base = "."
"reach_layer_base.schema" = "schema"
