[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reach-layer-mcp"
version = "0.1.0"
description = "Reach Layer — MCP channel adapter."
requires-python = ">=3.11"
dependencies = [
    "reach-layer-base",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "observability-layer",
    "opentelemetry-instrumentation-httpx>=0.61b0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.0",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src", "main.py"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.uv.sources]
observability-layer = { path = "../../observability_layer" }
reach-layer-base = { path = "../base", editable = true }
